[package]
name = "first-voxel-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = "0.10.0"
bitflags = "2.0.2"
bracket-noise = "0.8.7"
rand = "0.8.5"
rayon = "1.7.0"
smooth-bevy-cameras = "0.8.0"
